--- a/library SpringBoot/pom.xml
+++ b/library SpringBoot/pom.xml
@@ -45,8 +45,9 @@
                 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
                 <dependency>
                     <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>5.1.13</version>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+                        
                 </dependency>
 
 	</dependencies>
