--- a/library SpringBoot/src/main/resources/application.properties
+++ b/library SpringBoot/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library?seSSL=false&serverTime
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
+server.tomcat.relaxed-query-chars=|,{,},[,]
